apps/pgadmin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pgadmin
  labels:
    name: pgadmin
